<resources>
    <string name="app_name">Device Info</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Song</string>
    <string name="nav_header_subtitle" translatable="false">fengyas_ong@163.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_net">Net</string>
    <string name="menu_battery">Battery</string>
    <string name="menu_system">System</string>

    <string name="net_ipv4" translatable="false">IPv4</string>
    <string name="net_ipv6" translatable="false">IPv6</string>
    <string name="net_link_speed">LinkSpeed</string>
    <string name="net_bssid" translatable="false">BSSID</string>
    <string name="net_ssid" translatable="false">SSID</string>
    <string name="net_mac" translatable="false">MAC</string>
    <string name="net_id">ID</string>
    <string name="net_rssi">RSSI</string>
    <string name="net_level">Level</string>
    <string name="net_state">SupplicantState</string>
    <string name="net_proxy">Proxy</string>
    <string name="net_proxy_host">Proxy Host</string>
    <string name="net_proxy_port">Proxy Port</string>
    <string name="action_about">About</string>
    <string name="about_author" translatable="false">author\nsong</string>
    <string name="about_copy_right" translatable="false">© 2016 – 2020</string>
    <string name="about_version" translatable="false">version %s</string>
    <string name="net_frequency">Frequency</string>
    <string name="menu_thermal">Thermal</string>
    <string name="battery_level">Level</string>
    <string name="battery_status">Status</string>
    <string name="battery_health">Health</string>
    <string name="battery_power_source">Power source</string>
    <string name="battery_temperature">Temperature</string>
    <string name="battery_voltage">Voltage</string>
    <string name="battery_power_profile">Power profile</string>
    <string name="battery_present">Present</string>
    <string name="battery_technology">technology</string>
    <string name="battery_average">Average</string>
    <string name="system_manufacture">Manufacture</string>
    <string name="system_model">Model</string>
    <string name="system_brand">Brand</string>
    <string name="system_release">Release</string>
    <string name="system_api" translatable="false">API</string>
    <string name="system_code_name">Codename</string>
    <string name="system_density">Density</string>
    <string name="system_refresh_rate">Refresh rate</string>
    <string name="system_device">Device</string>
    <string name="system_product">Product</string>
    <string name="system_board">Board</string>
    <string name="system_platform">Platform</string>
    <string name="system_build">Build</string>
    <string name="system_vm" translatable="false">Java VM</string>
    <string name="system_security">Security</string>
    <string name="system_baseband">Baseband</string>
    <string name="system_build_type">Build type</string>
    <string name="system_tags" translatable="false">Tags</string>
    <string name="system_incremental">Incremental</string>
    <string name="system_description">Description</string>
    <string name="system_fingerprint">Fingerprint</string>
    <string name="system_device_features">Device features</string>
    <string name="system_builder">Builder</string>
    <string name="system_language">Language</string>
    <string name="system_timezone">Timezone</string>
    <string name="system_uptime">Uptime</string>
    <string name="nav_header_options">Options</string>
    <string name="partitions_used" translatable="false">used: %s/%s</string>
    <string name="partitions_fs_mod" translatable="false">fs: %s %s</string>
    <string name="menu_partitions">Partitions</string>
    <string name="store_mem_name">RAM</string>
    <string name="store_mem_free" translatable="false">Free:\t\t%s</string>
    <string name="store_mem_used" translatable="false">Used:\t\t%s %s%%</string>
    <string name="store_mem_total" translatable="false">Total:\t\t%s</string>
    <string name="store_mem_info" translatable="false">%s GB %s</string>
    <string name="store_sd_name">Internal Storage</string>
    <string name="store_sd_free" translatable="false">Free:\t\t%s</string>
    <string name="store_sd_used" translatable="false">Used:\t\t%s %s%%</string>
    <string name="store_sd_total" translatable="false">Total:\t\t%s</string>
    <string name="menu_store">Memory</string>
    <string name="menu_applications">Applications</string>
    <string name="menu_codecs">Codecs</string>
    <string name="menu_input">Input</string>
    <string name="menu_usb" translatable="false">USB</string>
    <string name="usb_vendor">Vendor</string>
    <string name="usb_model">Model</string>
    <string name="usb_device_id">Device ID</string>
    <string name="usb_number">Number</string>
    <string name="usb_path">Path</string>
    <string name="usb_version">Version</string>
    <string name="usb_serial">Serial</string>
    <string name="usb_devices">Devices</string>
    <string name="usb_not_found">not found</string>
    <string name="menu_soc">SOC</string>
    <string name="menu_emulator">Emulator</string>
    <string name="menu_virtual">VirtualApp</string>
    <string name="menu_debug">Debug</string>
    <string name="menu_root" translatable="false">Root</string>
    <string name="menu_hook" translatable="false">Hook</string>
    <string name="menu_device">Device</string>
    <!-- Language Preferences -->
    <string name="settings_language">Language</string>
    <string name="settings_language_default">Default</string>
    <string name="menu_app">APP</string>
    <string name="menu_wifi" translatable="false">WIFI</string>
    <string name="menu_bluetooth">Bluetooth</string>
    <string name="menu_others">Others</string>
    <string name="menu_camera">Camera</string>
    <string name="camera_aperture">Aperture</string>
    <string name="camera_resolution">Resolution</string>
    <string name="camera_focal_length">Focal length</string>
    <string name="camera_af_modes">Focus modes</string>
    <string name="camera_size">Sensor size</string>
    <string name="camera_pixel_size">Pixel size</string>
    <string name="camera_view_angle">View Angle</string>
    <string name="camera_formats">Image formats</string>
    <string name="camera_iso" translatable="false">ISO</string>
    <string name="camera_color_filter">Color Filter</string>
    <string name="camera_orientation">Orientation</string>
    <string name="camera_flash">Flash</string>
    <string name="menu_build" translatable="false">Build</string>
    <string name="menu_maps" translatable="false">Maps</string>
    <string name="menu_hardware">Hardware</string>
</resources>
